# caudio_video

./: .gitignore  README.md  aac.md  cmd.md  ffmpeg_doc.md  index.md
NVEncode_Decode/: NVEncode_Decode.sln
NVEncode_Decode/AppEncode/: AppEncode.vcxproj  AppEncode.vcxproj.filters  bmem.c  bmem.h  cavc.c  cavc.h  cdda_impl.cpp  cdda_impl.h  cdxgi_output_duplication.cpp  cdxgi_output_duplication.h  circlebuf.h  clog.c  clog.h  cnv_encode.c  cnv_encode.h  cnv_encode_helpers.c  cnv_encode_helpers.cpp  cnv_encode_helpers.h  darray.h  main.cpp
audio_demo/: audio_demo.sln
audio_demo/audio_demo/: audio_demo.vcxproj  audio_demo.vcxproj.filters  cadts.cpp  cadts.h  csdl2_play_aac.cpp  csdl2_play_aac.h  csdl2_play_pcm.cpp  csdl2_play_pcm.h  main.cpp
audio_video/: CMakeLists.txt  README.md
audio_video/NALU/: CMakeLists.txt  main.cpp
audio_video/SPS_PPS_IDR/: CMakeLists.txt  cbs_h2645.cpp  cbs_h2645.h  get_bits.h  h264.h  main.cpp
audio_video/bm_vpn_video/: CMakeLists.txt  main.cpp
audio_video/ch264/: README.md
audio_video/mp4toflv/: mp4toflv.c
audio_video/video/: CMakeLists.txt  READMD.md  main.cpp
dep/SDL2/lib/: SDL2.lib
dep/x64-windows-static/debug/lib/: zlibd.lib
dep/x64-windows-static/lib/: zlib.lib
dep/x64-windows-static/lib/pkgconfig/: libevent.pc  libevent_core.pc  libevent_extra.pc
mac/myapp/myapp_ffmpeg/: AppDelegate.swift  ViewController.swift  myapp_ffmpeg-Bridging-Header.h  swift_c.c  swift_c.h
mac/myapp/myapp_ffmpeg.xcodeproj/: project.pbxproj
mac/myapp/myapp_ffmpeg/Base.lproj/: Main.storyboard
(+6 files in other folders)
